// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Datetime reducer Should set the all day 1`] = `
Object {
  "allDay": true,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the all day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "June 25, 2018 4:00 pm",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": true,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator date 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": " > ",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": " | ",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "June 5, 2018 5:00 pm",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the timezone 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the timezone label 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "Modern Tribe",
}
`;

exports[`[STORE] - Datetime reducer Should set the visibility of the timezone 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the visibility of the timezone 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "showTimeZone": false,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should toggle the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": true,
  "showTimeZone": true,
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
  "timeZoneLabel": "UTC",
}
`;
